# implementations/dag-core/internal/application/dagruntime/usecase/request.go
@@ -22,6 +22,7 @@ type RunWorkflowResult struct {
 	RunID                string
 	Symbol               string
 	Mode                 string
+	Marketdata           *MarketdataRunInput
 	TaskID               string
 	TaskName             string
 	Attempt              int
